bento-grid tablet finalizado

--- a/Bento Grid/index.html
+++ b/Bento Grid/index.html
@@ -51,10 +51,12 @@
     </div>
     
     <div class="box item6">
-      <h2>>56%</h2>
-      <p>
-         faster audience growth
-        </p>
+      <div class="texto">
+        <h2>>56%</h2>
+        <p>
+           faster audience growth
+          </p>
+      </div>
         <img src="assets/images/illustration-audience-growth.webp" alt="illustration-audience-growth">
     </div>
 
